        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=28858
        Element.baseURI parses xml:base attribute incorrectly

        Test: fast/dom/base-attribute-parsing.xhtml

        * dom/Element.cpp: (WebCore::Element::baseURI): Avoid assertion failure (no change in
        release mode).



Canonical link: https://commits.webkit.org/39486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47910 268f45cc-cd09-0410-ab3c-d52691b4dbfc